coect.net copy changes.

--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "node-js-sample",
-  "version": "0.0.2",
-  "description": "a sample node.js app for heroku",
+  "name": "coect.net",
+  "version": "0.0.3",
+  "description": "coect.net web-site",
+  "private": true,
   "main": "web.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "~3.3.4"
+    "express": "~3.3.4",
+    "docpad": "~6.49.0",
+    "docpad-plugin-marked": "~2.1.1",
+    "docpad-plugin-eco": "~2.0.2",
+    "docpad-plugin-partials": "~2.7.2"
   },
   "engines": {
     "node": "0.10.13",
@@ -18,10 +23,9 @@
     "url": "https://github.com/heroku/node-js-sample"
   },
   "keywords": [
-    "node",
+    "coect",
     "heroku"
   ],
-  "author": "Mark Pundsack",
-  "license": "BSD",
-  "gitHead": "90fd58e343c29e54fc1d4e19036595500b2bdc21"
+  "author": "Dmytro V. Dogadailo",
+  "license": "BSD"
 }
