--- a/package.json
+++ b/package.json
@@ -1,31 +1,19 @@
 {
-  "name": "coect.net",
-  "version": "0.0.3",
-  "description": "coect.net web-site",
-  "private": true,
-  "main": "web.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "name": "no-skeleton.docpad",
+  "version": "0.1.0",
+  "description": "New DocPad project without using a skeleton",
+  "engines": {
+    "node": "0.10",
+    "npm": "1.3"
   },
   "dependencies": {
-    "express": "~3.3.4",
-    "docpad": "~6.49.0",
-    "docpad-plugin-marked": "~2.1.1",
-    "docpad-plugin-eco": "~2.0.2",
-    "docpad-plugin-partials": "~2.7.2"
+    "docpad": "~6.69.0",
+    "docpad-plugin-marked": "~2.2.1",
+    "docpad-plugin-partials": "~2.9.1",
+    "docpad-plugin-eco": "~2.0.3"
   },
-  "engines": {
-    "node": "0.10.13",
-    "npm": "1.3.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/heroku/node-js-sample"
-  },
-  "keywords": [
-    "coect",
-    "heroku"
-  ],
-  "author": "Dmytro V. Dogadailo",
-  "license": "BSD"
+  "main": "node_modules/docpad/bin/docpad-server",
+  "scripts": {
+    "start": "node_modules/docpad/bin/docpad-server"
+  }
 }
